# lexi

./: .gitignore  .pnp.cjs  CHANGELOG.md  LICENSE  README.md  app-icon.afdesign  deny.toml  justfile  lexi.code-workspace  package.json
.github/workflows/: ci.yaml  release.yaml
.zed/: settings.json
frontend/: .editorconfig  .gitignore  .parcelrc  .pnp.cjs  .prettierignore  README.md  TODO.md  package.json  tsconfig.json
frontend/fonts/iosevka/: .gitattributes  iosevka-unhinted-nottf.css  iosevka-unhinted-opt.css
frontend/src/: data.ts  index.css  index.html  index.tsx  routes.tsx  stitches.ts  stores.ts  util.ts
frontend/src/components/: breadcrumbs.tsx  navbar.module.css  navbar.tsx  plain_breadcrumb.tsx
frontend/src/pages/: about.module.css  about.tsx  home.module.css  home.tsx  lang_editor.tsx  langproto_editor.module.css  langproto_editor.tsx  page.tsx  settings.tsx
frontend/src/pages/lang/: builder.module.css  builder.tsx  describer.tsx  phonemes_editor.tsx
frontend/src/views/: app.module.css  app.tsx  editor_common.module.css  kaboom_app.module.css  kaboom_app.tsx  lang_editor.module.css  lang_editor.tsx  langproto_editor.tsx
icons/: template-icon.afdesign
src-tauri/: .gitignore  Cargo.toml  TODO.md  deny.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: data.rs  export.rs  file.rs  interact.rs  main.rs  parser.rs  util.rs
src-tauri/src/data/: language.rs  language_group.rs  phoneme.rs  protolanguage.rs
src-tauri/src/data/language_group/: tests.rs
src-tauri/src/data/language_group/snapshots/: app__data__language_group__tests__epoch_when_phoneme_and_protophoneme_exist_keeps_phoneme.snap  app__data__language_group__tests__lg_deny_set_phoneme_if_nonexistant.snap  app__data__language_group__tests__lg_epoch_preserves_protophonemes_in_language.snap  app__data__language_group__tests__merge_removes_nonexistant_ancestors-2.snap  app__data__language_group__tests__merge_removes_nonexistant_ancestors.snap
src-tauri/src/data/snapshots/: app__data__language_group__tests__epoch_when_phoneme_and_protophoneme_exist_keeps_phoneme.snap  app__data__language_group__tests__lg_epoch_preserves_protophonemes_in_language.snap  app__data__language_group__tests__merge_removes_nonexistant_ancestors_and_referents-2.snap  app__data__language_group__tests__merge_removes_nonexistant_ancestors_and_referents.snap
src-tauri/src/interact/: language.rs  project.rs  protolanguage.rs
src-tauri/src/parser/: environment.rs  syllable.rs  tests.rs
src-tauri/templates/: export.typ.askama
