[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = "https://github.com/Jengamon/lexi"
default-run = "app"
edition = "2021"
rust-version = "1.60"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["dialog"] }
thiserror = "1.0.43"
directories = "5.0.1"
glob = "0.3.1"
regex = { version = "1.9.1", features = [] }
askama = "0.12.0"
oneshot = "0.1.5"
ipa-translate = { version  = "0.1.6", git = "https://github.com/Jengamon/ipa-translate.git" }
serde_regex = "1.1.0"
semver = { version = "1.0.17", features = ["serde"] }
chrono = { version = "0.4.26", default-features = false, features = ["serde", "clock"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4.19"
uuid = { version = "1.4.0", features = ["serde", "v4", "fast-rng"] }
anyhow = "1.0.72"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml", "serde", "redactions"] }
